# FEHR

./: .cirrus.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  buddy.yml  build.sh  configure  configure_to_debug_build.sh  configure_with_specific_cmake.sh  fake_rom  get_latest_patch.sh  linkerscript  toolchain-gcc.cmake
.circleci/: config.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  cmake.yml
cmake/: devkitPro.cmake  grit.cmake  overrides-gcc.cmake
doc/: characters.kra
doc/bot/: CromarBot.sh  check_face.py  fehr unit.csv
include/: MPlayDef.s  achievement.h  animation_id.h  background.h  buff.h  chapter.h  character.h  character_id.h  character_palette.h  character_voice.h  event.h  event_handler.h  fontgrp.h  gba_debug_print.h  injector.h  item.h  item_icon.h  item_id.h  job.h  job_id.h  map_sprite.h  mgba.h  music.h  music_id.h  new_unit_state.h  popup.h  portrait.h  portrait_id.h  proc.h  skill.h  skill_id.h  sound_effect.h  text.h  text_id.h  util.h
lds/: achievement.ld  affinity.ld  animation.ld  background.ld  buff.ld  chapter_op_bg.ld  character_animation.ld  character_palette.ld  character_voice.ld  death_quote.ld  event_handler.ld  game_option.ld  item_icon.ld  items.ld  map_sprites.ld  music.ld  new_unit_state.ld  patch_allow_animation_off_for_fire_dragon.ld  patch_animation_palette_extension.lds  patch_disable_suspend.ld  patch_enable_BWL_display_at_first.ld  patch_expand_animation_compression_type.ld  patch_expand_animation_script_compression_type.ld  patch_expand_chapter_amount.ld  patch_expand_icon_amount.ld  patch_fix_map_sprite_overwrite_dialogue_portrait.ld  patch_list_all_allied_units_for_debug.ld  patch_opening_movie_disabler.ld  patch_remove_chapter_12_special_handle_routine.ld  patch_song_music_track_note.ld  patch_sound_compression_support.ld  patch_unit_auto_level_weapon_rank_with_weapon_lock.ld  patch_unlock_support_conversations.ld  promotion.ld  skill.ld  support.ld
res/character_palette/: character_palette_Alfonse.pal  character_palette_Dagr.pal  character_palette_Eitri.pal  character_palette_Laevatein.pal  character_palette_MyUnit.pal  character_palette_Nott.pal  character_palette_Sharena.pal  character_palette_Takumi.pal  character_palette_Xander.pal
res/gfx/: BG001_Brave.grit  BG001_BraveAttack.grit  BG001_BraveForest.grit  BG001_BraveInside.grit  BG002_ForestNight.grit  BG002_PlainForest.grit  BG002_PlainForestInside.grit  BG002_PlainSea.grit  BG003_Volcano.grit  BG005_Castle.grit  BG005_CastleJP.grit  BG007_SnowDreaming.grit  BG011_HalloweenCourtyard.grit  BG013_ChristmasForest.grit  BG014_GaidenCastle.grit  BG022_ByakuyaSummer.grit  BG022_DreameInvisibleKingdom.grit  BG024_Valentine.grit  BG025_NiflPlain.grit  BG026_Muspel.grit  BG026_MuspelCastle.grit  BG026_MuspelNightForest.grit  BG026_MuspelTemple.grit  EvBg_001_BraveGround.grit  EvBg_001_BraveLibrary.grit  EvBg_011_Halloween.grit  EvBg_038_Plegia.grit  EvBg_Alfheim.grit  EvBg_Alfheim_Throne.grit  EvBg_AngrbodaTemple.grit  EvBg_Beach.grit  EvBg_Beach02.grit  EvBg_BeachAlf.grit  EvBg_BraveCamp.grit  EvBg_BraveColosseum.grit  EvBg_BraveHell.grit  EvBg_BraveTwilight.grit  EvBg_BrideChurch_Outside.grit  EvBg_Building.grit  EvBg_ByakuyaNewyear.grit  (+168 more)
res/map/: map.tiled-project  map.tiled-session
res/music/: Event Plain 1.mp3.mid  Event Plain 2.mp3.mid  Event Plain 3.mp3.mid  Event Serious 1.mp3.mid  Event Serious 2.mp3.mid  FE4-Chapter6.mid  Fire Emblem Awakening - And what if I cant What if Im not worthy of her ideals.mid  Fire Emblem Awakening - Id Purpose.mid  Fire Emblem Awakening - Id Serenity.mid  Fire Emblem Awakening - Id Sorrow.mid  Fire Emblem Fates - Lost in Thoughts All Alone.mid  Fire Emblem Fates - Premonition.mid  Fire Emblem Fates - Road Taken.mid  Fire Emblem Fates - The Water Maiden.mid  Fire Emblem Gaiden - Celica Map 1.mid  Fire Emblem Gaiden - Encounter.mid  Fire Emblem Heroes - Event Theme 1.mid  Fire Emblem Heroes - Gear Up For.mid  Fire Emblem Heroes - Serious 6.mid  Fire Emblem Mystery of the Emblem - Legend of the Divine Dragon A.mid  Fire Emblem Mystery of the Emblem - Legend of the Divine Dragon B.mid  Fire Emblem Path of Radiance - PowerHungry Fool.mid  Fire Emblem Radiant Dawn - Eternal Bond.mid  Fire_Emblem_Fates_-_Dusk_Falls_COMPLETE_2.0.3.mid  Fire_Emblem_Three_Houses_-_Between_Heaven_and_Earth.mid  In_Search_of_the_VictoryLeif-_Fire_Emblem_Thracia_776.mid  Justice_RIP_-_FE_Fates_120916_16_tracks.MID  fe3mp1-1.mid  fe5-firstmap.mid  fe5-isaac-looped.MID  music_FE4_Chapter1.mid  music_FE4_Chapter2.mid  music_FE4_Chapter4.mid  music_FE4_Chapter8.mid  music_FE_Awakening_Chaos.mid  music_FE_Awakening_Conquest.mid  music_FE_Awakening_Duty.mid  music_FE_Awakening_Id_Dilemma.mid  music_FE_Awakening_Main_Theme_Title.mid  music_FE_Awakening_You_May_Call_Me_Marth.mid  (+36 more)
res/se/: Makefile  se_effect_anticounter.ckb  se_effect_cancel.ckb  se_effect_follow.ckb  se_effect_gravity.ckb  se_effect_live.ckb  se_effect_panic.ckb  se_effect_trilemma.ckb  se_sys_powerdown1.ckb  se_sys_powerup1.ckb  se_test_dash.ckb  se_test_jump.ckb
res/voice/: Makefile  (+349 more)
src/: achievement.c  affinity.c  attack_voice.s  background.c  buff.c  chapter_event.c  chapter_map.c  chapter_op_bg.c  chapter_setting.c  chapter_title.c  chapter_title_1.s  chapter_title_2.s  character.c  character_animation.c  character_palette.c  character_voice.c  death_quote.c  event_handler.c  fix_steal_hp_animation.s  game_option.c  gba_debug_print.c  item.c  item_icon.c  job.c  m4a_hq_mixer.s  map_sprite.c  mgba.c  music.c  new_unit_state.c  patch_allow_animation_off_for_fire_dragon.c  patch_animation_palette_extension.c  patch_continue_battle_BGM.c  patch_disable_game_mode_selection.c  patch_disable_suspend.c  patch_enable_BWL_display_at_first.c  patch_expand_animation_compression_type.c  patch_expand_animation_script_compression_type.c  patch_expand_chapter_amount.c  patch_expand_chapter_amount_injector.s  patch_expand_icon_amount.c  (+22 more)
tool/: GBAHack.py  analyze_map.py  show_asm.sh
(+3863 files in other folders)
